Major changes to the padding of the site. Plus minor spacing bug fixes

--- a/src/style/global.less
+++ b/src/style/global.less
@@ -11,8 +11,12 @@ html {
 }
 
 hr {
-  border: 3px solid #fff;
+  border: 1px solid #fff;
   border-radius: 5px;
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 /* width */
